[back][fix] comment명 변경, endpoint 변경
