# back/src/routers/freeboardcommentRouter.js
@@ -1,21 +1,21 @@
 import is from '@sindresorhus/is';
 import { Router } from 'express';
 import { loginRequired } from '../middlewares/loginRequired';
-import { commentService } from '../services/commentService';
+import { freeboardcommentService } from '../services/freeboardcommentService';
 
-const ftcommentRouter = Router();
-// ftcommentRouter.use(loginRequired);
+const freeboardcommentRouter = Router();
+// commentRouter.use(loginRequired);
 
-ftcommentRouter.post('/findteam/comment', loginRequired, async (req, res, next) => {
+freeboardcommentRouter.post('/freeboards/comments', loginRequired, async (req, res, next) => {
   try {
     /*
-     #swagger.tags = ['findteamcomment'] 
-     #swagger.summary = '팀 찾기 게시글에 댓글 생성' 
+     #swagger.tags = ['freeboardcomment'] 
+     #swagger.summary = '자유게시판 게시글에 댓글 생성' 
      #swagger.security = [{ "bearerAuth": [] }]
     */
     const { board_id, user_id, name, content } = req.body;
 
-    const newComment = await commentService.addComment({
+    const newComment = await freeboardcommentService.addComment({
       board_id,
       user_id,
       name,
@@ -33,15 +33,15 @@ ftcommentRouter.post('/findteam/comment', loginRequired, async (req, res, next) 
 });
 
 // 특정 댓글 조회 API
-ftcommentRouter.get('/findteam/comments/:id', loginRequired, async (req, res, next) => {
+freeboardcommentRouter.get('/freeboards/comments/:id', loginRequired, async (req, res, next) => {
   try {
     /*
-     #swagger.tags = ['findteamcomment'] 
+     #swagger.tags = ['freeboardcomment'] 
      #swagger.summary = '댓글 id에 해당하는 댓글 가져오기' 
      #swagger.security = [{ "bearerAuth": [] }]
     */
     const comment_id = req.params.id;
-    const currentComment = await commentService.getComment({ comment_id });
+    const currentComment = await freeboardcommentService.getComment({ comment_id });
 
     if (currentComment.errorMessage) {
       throw new Error(currentComment.errorMessage);
@@ -54,10 +54,10 @@ ftcommentRouter.get('/findteam/comments/:id', loginRequired, async (req, res, ne
 });
 
 // 특정 댓글 수정 API
-ftcommentRouter.put('/findteam/comments/:id', loginRequired, async (req, res, next) => {
+freeboardcommentRouter.put('/freeboards/comments/:id', loginRequired, async (req, res, next) => {
   try {
     /*
-     #swagger.tags = ['findteamcomment'] 
+     #swagger.tags = ['freeboardcomment'] 
      #swagger.summary = '댓글 수정하기' 
      #swagger.security = [{ "bearerAuth": [] }]
     */
@@ -70,7 +70,7 @@ ftcommentRouter.put('/findteam/comments/:id', loginRequired, async (req, res, ne
 
     const toUpdate = { board_id, user_id, name, content, created_at };
 
-    const updatedComment = await commentService.setComment({ comment_id, toUpdate });
+    const updatedComment = await freeboardcommentService.setComment({ comment_id, toUpdate });
 
     if (updatedComment.errorMessage) {
       throw new Error(updatedComment.errorMessage);
@@ -82,15 +82,15 @@ ftcommentRouter.put('/findteam/comments/:id', loginRequired, async (req, res, ne
   }
 });
 
-ftcommentRouter.delete('/findteam/comments/:id', loginRequired, async (req, res, next) => {
+freeboardcommentRouter.delete('/freeboards/comments/:id', loginRequired, async (req, res, next) => {
   try {
     /*
-     #swagger.tags = ['findteamcomment'] 
+     #swagger.tags = ['freeboardcomment'] 
      #swagger.summary = '댓글 삭제하기' 
      #swagger.security = [{ "bearerAuth": [] }]
     */
     const comment_id = req.params.id;
-    const deletedComment = await commentService.deleteComment({
+    const deletedComment = await freeboardcommentService.deleteComment({
       comment_id,
     });
     if (deletedComment.errorMessage) {
@@ -102,15 +102,15 @@ ftcommentRouter.delete('/findteam/comments/:id', loginRequired, async (req, res,
   }
 });
 
-ftcommentRouter.get('/findteam/usercommentlist/:user_id', loginRequired, async (req, res, next) => {
+freeboardcommentRouter.get('/freeboards/usercommentlist/:user_id', loginRequired, async (req, res, next) => {
   try {
     /*
-     #swagger.tags = ['findteamcomment'] 
-     #swagger.summary = '유저 id가 작성한 댓글 목록 가져오기' 
+     #swagger.tags = ['freeboardcomment'] 
+     #swagger.summary = '유저 id의 모든 작성 댓글 가져오기' 
      #swagger.security = [{ "bearerAuth": [] }]
     */
     const user_id = req.params.user_id;
-    const comments = await commentService.getCommentsById({ user_id });
+    const comments = await freeboardcommentService.getCommentsById({ user_id });
 
     res.status(200).send(comments);
   } catch (error) {
@@ -118,19 +118,19 @@ ftcommentRouter.get('/findteam/usercommentlist/:user_id', loginRequired, async (
   }
 });
 
-ftcommentRouter.get('/findteam/boardcommentlist/:board_id', loginRequired, async (req, res, next) => {
+freeboardcommentRouter.get('/freeboards/boardcommentlist/:board_id', loginRequired, async (req, res, next) => {
   try {
     /*
-     #swagger.tags = ['findteamcomment'] 
+     #swagger.tags = ['freeboardcomment'] 
      #swagger.summary = '게시글의 모든 댓글 목록 가져오기' 
      #swagger.security = [{ "bearerAuth": [] }]
     */
     const board_id = req.params.board_id;
-    const comments = await commentService.getCommentsByBoardId({ board_id });
+    const comments = await freeboardcommentService.getCommentsByBoardId({ board_id });
 
     res.status(200).send(comments);
   } catch (error) {
     next(error);
   }
 });
-export { ftcommentRouter };
+export { freeboardcommentRouter };
