# back/src/swagger/swagger-output.json
@@ -238,7 +238,7 @@
         ]
       }
     },
-    "/freeboard": {
+    "/freeboards": {
       "post": {
         "tags": [
           "freeboard"
@@ -292,7 +292,7 @@
         }
       }
     },
-    "/freeboard/{id}": {
+    "/freeboards/{id}": {
       "get": {
         "tags": [
           "freeboard"
@@ -492,7 +492,7 @@
         ]
       }
     },
-    "/freeboard/comment": {
+    "/freeboards/comments": {
       "post": {
         "tags": [
           "freeboardcomment"
@@ -546,7 +546,7 @@
         }
       }
     },
-    "/freeboard/comments/{id}": {
+    "/freeboards/comments/{id}": {
       "get": {
         "tags": [
           "freeboardcomment"
@@ -685,7 +685,7 @@
         ]
       }
     },
-    "/freeboard/usercommentlist/{user_id}": {
+    "/freeboards/usercommentlist/{user_id}": {
       "get": {
         "tags": [
           "freeboardcomment"
@@ -724,7 +724,7 @@
         ]
       }
     },
-    "/freeboard/boardcommentlist/{board_id}": {
+    "/freeboards/boardcommentlist/{board_id}": {
       "get": {
         "tags": [
           "freeboardcomment"
@@ -763,7 +763,7 @@
         ]
       }
     },
-    "/findteam": {
+    "/findteams": {
       "post": {
         "tags": [
           "findteam"
@@ -820,7 +820,7 @@
         }
       }
     },
-    "/findteam/{id}": {
+    "/findteams/{id}": {
       "get": {
         "tags": [
           "findteam"
@@ -1023,7 +1023,7 @@
         ]
       }
     },
-    "/findteam/comment": {
+    "/findteams/comments": {
       "post": {
         "tags": [
           "findteamcomment"
@@ -1077,7 +1077,7 @@
         }
       }
     },
-    "/findteam/comments/{id}": {
+    "/findteams/comments/{id}": {
       "get": {
         "tags": [
           "findteamcomment"
@@ -1216,7 +1216,7 @@
         ]
       }
     },
-    "/findteam/usercommentlist/{user_id}": {
+    "/findteams/usercommentlist/{user_id}": {
       "get": {
         "tags": [
           "findteamcomment"
@@ -1255,7 +1255,7 @@
         ]
       }
     },
-    "/findteam/boardcommentlist/{board_id}": {
+    "/findteams/boardcommentlist/{board_id}": {
       "get": {
         "tags": [
           "findteamcomment"
